// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Home Component matches the snapshot when still loading 1`] = `
<DocumentFragment>
  <main>
    <header>
      <nav
        class="container-fluid navbar navbar-expand-lg navbar-dark"
      >
        <div
          aria-labelledby="title"
          class="navbar-brand pointer"
          role="button"
          tabindex="0"
        />
        <img
          alt="B.C. Government Logo"
          class="img-fluid d-none d-md-block"
          height="44"
          src="[object Object]"
          width="181"
        />
        <img
          alt="B.C. Government Logo"
          class="img-fluid d-md-none"
          height="44"
          src="[object Object]"
          width="64"
        />
        <div
          aria-labelledby="title"
          class="pointer navbar-brand nav-item nav-link"
          role="button"
          tabindex="0"
        />
        <div
          class="navbar-brand"
          id="title"
        >
          eFiling Frontend
        </div>
      </nav>
    </header>
    <div
      class="page"
    >
      <div
        class="content col-md-10"
      >
        <div
          class="loader-align"
        >
          <div
            class="page-loader"
          />
          <br />
          Loading... Please Wait
        </div>
      </div>
    </div>
    <footer
      class="footer"
    >
      <nav
        class="navbar navbar-expand-sm navbar-dark justify-content-end"
      >
        <button
          class="navbar-toggler"
          data-target="#footerBar"
          data-toggle="collapse"
          type="button"
        >
          <span
            class="navbar-toggler-icon"
          />
        </button>
        <div
          class="collapse navbar-collapse flex-grow-0"
          id="footerBar"
        >
          <ul
            class="navbar-nav text-right"
          >
            <li
              class="nav-item m-1"
            >
              <a
                class="nav-link"
                href="https://www2.gov.bc.ca"
                rel="noopener noreferrer"
                target="_blank"
              >
                BC Government
              </a>
            </li>
            <li
              class="nav-item m-1"
            >
              <a
                class="nav-link"
                href="https://www2.gov.bc.ca/gov/content/home/disclaimer"
                rel="noopener noreferrer"
                target="_blank"
              >
                Disclaimer
              </a>
            </li>
            <li
              class="nav-item m-1"
            >
              <a
                class="nav-link"
                href="https://www2.gov.bc.ca/gov/content/home/privacy"
                rel="noopener noreferrer"
                target="_blank"
              >
                Privacy
              </a>
            </li>
            <li
              class="nav-item m-1"
            >
              <a
                class="nav-link"
                href="https://www2.gov.bc.ca/gov/content/home/accessibility"
                rel="noopener noreferrer"
                target="_blank"
              >
                Accessibility
              </a>
            </li>
            <li
              class="nav-item m-1"
            >
              <a
                class="nav-link"
                href="https://www2.gov.bc.ca/gov/content/home/copyright"
                rel="noopener noreferrer"
                target="_blank"
              >
                Copyright
              </a>
            </li>
          </ul>
        </div>
      </nav>
    </footer>
  </main>
</DocumentFragment>
`;

exports[`Home Component matches the snapshot when user cso account does not exist 1`] = `
<DocumentFragment>
  <main>
    <header>
      <nav
        class="container-fluid navbar navbar-expand-lg navbar-dark"
      >
        <div
          aria-labelledby="title"
          class="navbar-brand pointer"
          role="button"
          tabindex="0"
        />
        <img
          alt="B.C. Government Logo"
          class="img-fluid d-none d-md-block"
          height="44"
          src="[object Object]"
          width="181"
        />
        <img
          alt="B.C. Government Logo"
          class="img-fluid d-md-none"
          height="44"
          src="[object Object]"
          width="64"
        />
        <div
          aria-labelledby="title"
          class="pointer navbar-brand nav-item nav-link"
          role="button"
          tabindex="0"
        />
        <div
          class="navbar-brand"
          id="title"
        >
          eFiling Frontend
        </div>
      </nav>
    </header>
    <div
      class="page"
    >
      <div
        class="content col-md-10"
      >
        <div>
          <p>
            Account does not exist, form will be here
          </p>
        </div>
      </div>
    </div>
    <footer
      class="footer"
    >
      <nav
        class="navbar navbar-expand-sm navbar-dark justify-content-end"
      >
        <button
          class="navbar-toggler"
          data-target="#footerBar"
          data-toggle="collapse"
          type="button"
        >
          <span
            class="navbar-toggler-icon"
          />
        </button>
        <div
          class="collapse navbar-collapse flex-grow-0"
          id="footerBar"
        >
          <ul
            class="navbar-nav text-right"
          >
            <li
              class="nav-item m-1"
            >
              <a
                class="nav-link"
                href="https://www2.gov.bc.ca"
                rel="noopener noreferrer"
                target="_blank"
              >
                BC Government
              </a>
            </li>
            <li
              class="nav-item m-1"
            >
              <a
                class="nav-link"
                href="https://www2.gov.bc.ca/gov/content/home/disclaimer"
                rel="noopener noreferrer"
                target="_blank"
              >
                Disclaimer
              </a>
            </li>
            <li
              class="nav-item m-1"
            >
              <a
                class="nav-link"
                href="https://www2.gov.bc.ca/gov/content/home/privacy"
                rel="noopener noreferrer"
                target="_blank"
              >
                Privacy
              </a>
            </li>
            <li
              class="nav-item m-1"
            >
              <a
                class="nav-link"
                href="https://www2.gov.bc.ca/gov/content/home/accessibility"
                rel="noopener noreferrer"
                target="_blank"
              >
                Accessibility
              </a>
            </li>
            <li
              class="nav-item m-1"
            >
              <a
                class="nav-link"
                href="https://www2.gov.bc.ca/gov/content/home/copyright"
                rel="noopener noreferrer"
                target="_blank"
              >
                Copyright
              </a>
            </li>
          </ul>
        </div>
      </nav>
    </footer>
  </main>
</DocumentFragment>
`;

exports[`Home Component matches the snapshot when user cso account exists 1`] = `
<DocumentFragment>
  <main>
    <header>
      <nav
        class="container-fluid navbar navbar-expand-lg navbar-dark"
      >
        <div
          aria-labelledby="title"
          class="navbar-brand pointer"
          role="button"
          tabindex="0"
        />
        <img
          alt="B.C. Government Logo"
          class="img-fluid d-none d-md-block"
          height="44"
          src="[object Object]"
          width="181"
        />
        <img
          alt="B.C. Government Logo"
          class="img-fluid d-md-none"
          height="44"
          src="[object Object]"
          width="64"
        />
        <div
          aria-labelledby="title"
          class="pointer navbar-brand nav-item nav-link"
          role="button"
          tabindex="0"
        />
        <div
          class="navbar-brand"
          id="title"
        >
          eFiling Frontend
        </div>
      </nav>
    </header>
    <div
      class="page"
    >
      <div
        class="content col-md-10"
      >
        <div>
          <p>
            Account exists! Proceed
          </p>
        </div>
      </div>
    </div>
    <footer
      class="footer"
    >
      <nav
        class="navbar navbar-expand-sm navbar-dark justify-content-end"
      >
        <button
          class="navbar-toggler"
          data-target="#footerBar"
          data-toggle="collapse"
          type="button"
        >
          <span
            class="navbar-toggler-icon"
          />
        </button>
        <div
          class="collapse navbar-collapse flex-grow-0"
          id="footerBar"
        >
          <ul
            class="navbar-nav text-right"
          >
            <li
              class="nav-item m-1"
            >
              <a
                class="nav-link"
                href="https://www2.gov.bc.ca"
                rel="noopener noreferrer"
                target="_blank"
              >
                BC Government
              </a>
            </li>
            <li
              class="nav-item m-1"
            >
              <a
                class="nav-link"
                href="https://www2.gov.bc.ca/gov/content/home/disclaimer"
                rel="noopener noreferrer"
                target="_blank"
              >
                Disclaimer
              </a>
            </li>
            <li
              class="nav-item m-1"
            >
              <a
                class="nav-link"
                href="https://www2.gov.bc.ca/gov/content/home/privacy"
                rel="noopener noreferrer"
                target="_blank"
              >
                Privacy
              </a>
            </li>
            <li
              class="nav-item m-1"
            >
              <a
                class="nav-link"
                href="https://www2.gov.bc.ca/gov/content/home/accessibility"
                rel="noopener noreferrer"
                target="_blank"
              >
                Accessibility
              </a>
            </li>
            <li
              class="nav-item m-1"
            >
              <a
                class="nav-link"
                href="https://www2.gov.bc.ca/gov/content/home/copyright"
                rel="noopener noreferrer"
                target="_blank"
              >
                Copyright
              </a>
            </li>
          </ul>
        </div>
      </nav>
    </footer>
  </main>
</DocumentFragment>
`;
